FIXES style and text spacing and lenght related tickets

--- a/src/app/pages/catalogs/catalogs.component.html
+++ b/src/app/pages/catalogs/catalogs.component.html
@@ -35,14 +35,14 @@
 
                 <div (click)="goToCatalogSearch(cat.id)" class="block cursor-pointer rounded-lg bg-cover" style="background-image: url(assets/logos/dome-logo-element-colour.png);" >
                     <div class="block w-full h-full p-6 bg-opacity-100 bg-secondary-50 rounded-lg dark:bg-secondary-100 bg-secondary-50/90 dark:bg-secondary-100/90 bg-cover">
-                        <h5 class="text-2xl font-bold tracking-tight text-primary-100 dark:text-white">{{cat.name}}</h5>
-                        <p class="font-normal text-gray-700 dark:text-gray-400 line-clamp-3">{{cat.description ? cat.description : 'CATALOGS._no_desc' | translate}}</p>
+                        <h5 class="text-2xl font-bold tracking-tight text-primary-100 dark:text-white text-wrap break-all">{{cat.name}}</h5>
+                        <p class="font-normal text-gray-700 dark:text-gray-400 line-clamp-3 text-wrap break-all">{{cat.description ? cat.description : 'CATALOGS._no_desc' | translate}}</p>
                         <hr class="h-px my-1 bg-primary-100 border-0 dark:bg-primary-100">
                         <div class="">
                           @for(category of cat.category; track category.id) {
-                            <span class="inline-block bg-blue-300 text-primary-100 text-xs font-bold me-2 px-2.5 py-0.5 rounded-full w-fit">{{category.name}}</span>
+                            <span class="inline-block bg-blue-300 text-primary-100 text-xs font-bold me-2 px-2.5 py-0.5 rounded-full w-fit text-wrap break-all">{{category.name}}</span>
                           } @empty {
-                            <span class="inline-block bg-blue-300 text-primary-100 text-xs font-bold me-2 px-2.5 py-0.5 rounded-full w-fit">{{'CATALOGS._no_cat' | translate}}</span>                            
+                            <span class="inline-block bg-blue-300 text-primary-100 text-xs font-bold me-2 px-2.5 py-0.5 rounded-full w-fit text-wrap break-all">{{'CATALOGS._no_cat' | translate}}</span>                            
                           }
                         </div>
 
