--- a/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
@@ -228,7 +228,7 @@
                         <div class="px-4 py-2 bg-white dark:bg-secondary-300 rounded-b-lg">
                             <label for="editor" class="sr-only">Publish post</label>
                             @if(showPreview){
-                                    <markdown class="bg-gray-50 dark:bg-secondary-300 dark:text-white text-gray-900" [data]="description"></markdown>
+                                    <markdown class="bg-gray-50 text-wrap break-all dark:bg-secondary-300 dark:text-white text-gray-900" [data]="description"></markdown>
                                 
                             }@else{
                                 <textarea id="editor" formControlName="description" rows="8" class="block w-full px-0 text-sm text-gray-800 dark:text-gray-200 bg-white dark:bg-secondary-300 border-0" placeholder="Add product description..." ></textarea>
@@ -256,7 +256,7 @@
                     <label for="prod-brand" class="font-bold text-lg dark:text-white">{{ 'CREATE_OFFER._is_bundled' | translate }}</label>
                     <label class="inline-flex items-center me-5 cursor-pointer ml-4">
                         <input type="checkbox" (change)="toggleBundleCheck()" [checked]="bundleChecked" class="sr-only peer">
-                        <div class="relative w-11 h-6 bg-gray-200 dark:bg-gray-700 rounded-full peer peer-focus:ring-4 peer-focus:ring-primary-100 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-primary-100"></div>
+                        <div class="relative w-11 h-6 bg-gray-400 dark:bg-gray-700 rounded-full peer peer-focus:ring-4 peer-focus:ring-primary-100 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-primary-100"></div>
                     </label>
                 </div>
                 @if(bundleChecked){
@@ -769,7 +769,7 @@
                                     <div class="px-4 py-2 bg-white dark:bg-secondary-300 rounded-b-lg">
                                         <label for="editor" class="sr-only">Publish post</label>
                                         @if(showPreview){
-                                                <markdown class="bg-gray-50 dark:bg-secondary-300 dark:text-white text-gray-900" [data]="licenseDescription"></markdown>
+                                                <markdown class="bg-gray-50 text-wrap break-all dark:bg-secondary-300 dark:text-white text-gray-900" [data]="licenseDescription"></markdown>
                                             
                                         }@else{
                                             <textarea id="editor" formControlName="description" rows="8" class="block w-full px-0 text-sm text-gray-800 dark:text-gray-200 bg-white dark:bg-secondary-300 border-0" placeholder="Add product description..." ></textarea>
@@ -990,10 +990,10 @@
                             <tbody>
                                 @for (price of createdPrices; track price.id) {
                                     <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                                        <td class="px-6 py-4">
+                                        <td class="px-6 py-4 max-w-1/6 text-wrap break-all">
                                             {{price.name}}
                                         </td>
-                                        <td class="hidden xl:table-cell px-6 py-4 line-clamp-1">
+                                        <td class="hidden xl:table-cell px-6 py-4 text-wrap break-all">
                                             {{price.description}}
                                         </td>
                                         <td class="hidden md:table-cell px-6 py-4">
@@ -1005,7 +1005,7 @@
                                         <td class="px-6 py-4">
                                             {{price.price?.taxIncludedAmount?.unit}}
                                         </td>
-                                        <td class="px-6 py-4">
+                                        <td class="px-6 py-4 inline-flex">
                                             <button (click)="removePrice(price)" type="button" class="text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-full text-sm p-1 text-center inline-flex items-center">
                                                 <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6"/>
@@ -1181,7 +1181,7 @@
                                     <div class="px-4 py-2 bg-white dark:bg-secondary-300 rounded-b-lg">
                                         <label for="editor" class="sr-only">Publish post</label>
                                         @if(showPreview){
-                                                <markdown class="bg-gray-50 dark:bg-secondary-300 dark:text-white text-gray-900" [data]="priceDescription"></markdown>
+                                                <markdown class="bg-gray-50 text-wrap break-all dark:bg-secondary-300 dark:text-white text-gray-900" [data]="priceDescription"></markdown>
                                             
                                         }@else{
                                             <textarea id="editor" formControlName="description" rows="8" class="block w-full px-0 text-sm text-gray-800 border-0 dark:text-gray-200 bg-white dark:bg-secondary-300" placeholder="Add product description..." ></textarea>
@@ -1311,14 +1311,14 @@
                     <div class="mb-4 grid grid-cols-2 gap-4">
                         <div>
                             <label class="font-bold text-lg dark:text-white">{{ 'CREATE_OFFER._name' | translate }}</label>
-                            <label class="mb-2 bg-gray-50 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            <label class="mb-2 bg-gray-50 text-wrap break-all dark:bg-secondary-300 dark:border-secondary-200 dark:text-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 {{offerToCreate?.name}}
                             </label>
 
                         </div>
                         <div>
                             <label for="prod-version" class="font-bold text-lg dark:text-white">{{ 'CREATE_OFFER._version' | translate }}</label>
-                            <label class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            <label class="mb-2 bg-gray-50 text-wrap break-all border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 {{offerToCreate?.version}}
                             </label>
                         </div>
@@ -1340,13 +1340,13 @@
                     @if(offerToCreate?.description !=''){
                         <label class="font-bold text-lg dark:text-white">{{ 'CREATE_OFFER._description' | translate }}</label>
                         <div class="px-4 py-2 bg-white rounded-lg p-4 mb-4 dark:bg-secondary-300 dark:text-white border dark:border-secondary-200">                                
-                            <markdown class="bg-gray-50 dark:bg-secondary-300 dark:text-white text-gray-900" [data]="offerToCreate?.description"></markdown>
+                            <markdown class="bg-gray-50 dark:bg-secondary-300 dark:text-white text-gray-900 text-wrap break-all" [data]="offerToCreate?.description"></markdown>
                         </div>
                     }
 
                     @if(offersBundle.length>0){
                         <label class="font-bold text-lg dark:text-white">{{ 'CREATE_OFFER._bundle' | translate }}</label>
-                        <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white m-4">                        
+                        <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white mb-4">                        
                             <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-200">
                                 <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-secondary-200 dark:text-white">
                                     <tr>
@@ -1383,7 +1383,7 @@
                     }
                 
                     <label class="font-bold text-lg dark:text-white">{{ 'CREATE_OFFER._catalog' | translate }}</label>
-                    <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white m-4">                        
+                    <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white mb-4">                        
                     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-200">
                         <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-secondary-200 dark:text-white">
                             <tr>
@@ -1423,7 +1423,7 @@
                 </div>
                 @if(selectedCategories.length>0){
                     <h2 class="font-bold text-lg dark:text-white">{{ 'CREATE_OFFER._category' | translate }}</h2>
-                    <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white m-4">   
+                    <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white mb-4">   
                         <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-200">
                             <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-secondary-200 dark:text-white">
                                 <tr>
@@ -1452,7 +1452,7 @@
                 }
                 @if(createdPrices.length>0){
                     <h2 class="font-bold text-lg dark:text-white">{{ 'CREATE_OFFER._price_plans' | translate }}</h2>
-                    <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white m-4">                        
+                    <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white mb-4">                        
                         <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-200">
                             <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-secondary-200 dark:text-white">
                                 <tr>
@@ -1476,10 +1476,10 @@
                             <tbody>
                                 @for (price of createdPrices; track price.id) {
                                     <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                                        <td class="px-6 py-4">
+                                        <td class="px-6 py-4 max-w-1/6 text-wrap break-all">
                                             {{price.name}}
                                         </td>
-                                        <td class="hidden md:table-cell px-6 py-4 line-clamp-1">
+                                        <td class="hidden md:table-cell px-6 py-4 text-wrap break-all">
                                             {{price.description}}
                                         </td>
                                         <td class="hidden md:table-cell px-6 py-4">
@@ -1499,7 +1499,7 @@
                 }
                 @if(createdSLAs.length>0){
                     <h2 class="font-bold text-lg">{{ 'CREATE_OFFER._sla' | translate }}</h2>
-                    <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white m-4">                        
+                    <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white mb-4">                        
                         <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-200">
                             <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-secondary-200 dark:text-white">
                                 <tr>
@@ -1542,12 +1542,12 @@
                     <h2 class="font-bold text-lg dark:text-white">{{ 'CREATE_OFFER._license' | translate }}</h2>
                     <div>
                         <label for="treatment" class="font-bold text-base dark:text-white">{{ 'CREATE_OFFER._treatment' | translate }}</label>
-                        <label class="mb-2 bg-gray-50 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                        <label class="mb-2 bg-gray-50 text-wrap break-all dark:bg-secondary-300 dark:border-secondary-200 dark:text-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                             {{createdLicense.treatment}}
                         </label>
                         <label class="font-bold text-base dark:text-white">{{ 'CREATE_OFFER._description' | translate }}</label>
-                        <div class="px-4 py-2 bg-white dark:bg-secondary-300 border dark:border-secondary-200 dark:text-white rounded-lg p-4"> 
-                            <markdown class="bg-gray-50 dark:bg-secondary-300 dark:text-white text-gray-900" [data]="createdLicense.description"></markdown>
+                        <div class="px-4 py-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-white rounded-lg p-4"> 
+                            <markdown class="bg-gray-50 dark:bg-secondary-300 dark:text-white text-gray-900 text-wrap break-all" [data]="createdLicense.description"></markdown>
                         </div>
                     </div>
                 }
@@ -1716,7 +1716,7 @@
                         <div class="px-4 py-2 bg-white dark:bg-secondary-300 rounded-b-lg">
                             <label for="editor" class="sr-only">Publish post</label>
                             @if(showPreview){
-                                    <markdown class="bg-gray-50 dark:bg-secondary-300 dark:text-white text-gray-900" [data]="priceDescription"></markdown>
+                                    <markdown class="bg-gray-50 text-wrap break-all dark:bg-secondary-300 dark:text-white text-gray-900" [data]="priceDescription"></markdown>
                                 
                             }@else{
                                 <textarea id="editor" formControlName="description" rows="8" class="block w-full px-0 text-sm text-gray-800 border-0 dark:text-gray-200 bg-white dark:bg-secondary-300" placeholder="Add product description..." ></textarea>
