--- a/src/app/pages/admin/categories/update-category/update-category.component.html
+++ b/src/app/pages/admin/categories/update-category/update-category.component.html
@@ -223,7 +223,7 @@
                             <div class="px-4 py-2 bg-white dark:bg-secondary-300 rounded-b-lg">
                                 <label for="editor" class="sr-only">Publish post</label>
                                 @if(showPreview){
-                                        <markdown class="bg-gray-50 dark:bg-secondary-300 dark:text-white text-gray-900" [data]="description"></markdown>
+                                        <markdown class="bg-gray-50 text-wrap break-all dark:bg-secondary-300 dark:text-white text-gray-900" [data]="description"></markdown>
                                     
                                 }@else{
                                     <textarea id="editor" formControlName="description" rows="8" class="block w-full px-0 text-sm text-gray-800 dark:text-gray-200 bg-white dark:bg-secondary-300 border-0" placeholder="Add product description..." ></textarea>
@@ -237,7 +237,7 @@
                         <label class="font-bold text-lg dark:text-white">{{ 'UPDATE_CATEGORIES._choose_parent' | translate }}</label>
                         <label class="inline-flex items-center me-5 cursor-pointer ml-4">
                             <input type="checkbox" (change)="toggleParent()" [disabled]="checkDisableParent" [checked]="parentSelectionCheck" class="sr-only peer">
-                            <div class="relative w-11 h-6 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-primary-100 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-primary-100"></div>
+                            <div class="relative w-11 h-6 bg-gray-400 dark:bg-gray-700 rounded-full peer peer-focus:ring-4 peer-focus:ring-primary-100 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-primary-100"></div>
                         </label>
                         @if(parentSelectionCheck){
                             @if(categories.length==0){
@@ -270,7 +270,7 @@
                                 <tbody>
                                     @for (cat of categories; track cat.id;let idx = $index) {
                                         <tr class="flex border-b dark:border-gray-700 hover:bg-gray-200 w-full justify-between dark:bg-secondary-300 dark:hover:bg-secondary-200">
-                                            <td class="flex px-6 py-4 w-3/5">
+                                            <td class="flex px-6 py-4 w-3/5 text-wrap break-all">
                                                 <b>{{cat.name}}</b>
                                             </td>
                                             <td class="hidden md:flex px-6 py-4 w-fit">
@@ -312,7 +312,7 @@
                 <div class="m-8">
                     <div>
                         <label class="font-bold text-lg dark:text-white">{{ 'UPDATE_CATEGORIES._name' | translate }}</label>
-                        <label class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                        <label class="mb-2 bg-gray-50 text-wrap break-all border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                             {{categoryToUpdate?.name}}
                         </label>
                     </div>
@@ -333,14 +333,14 @@
                     @if(categoryToUpdate?.description !=''){
                         <label class="font-bold text-lg dark:text-white">{{ 'UPDATE_CATEGORIES._description' | translate }}</label>
                         <div class="px-4 py-2 bg-white dark:bg-secondary-300 border dark:border-secondary-200 rounded-lg p-4 mb-4">
-                            <markdown class="bg-gray-50 dark:bg-secondary-100 dark:text-white text-gray-900" [data]="categoryToUpdate?.description"></markdown>
+                            <markdown class="bg-gray-50 text-wrap break-all dark:bg-secondary-100 dark:text-white text-gray-900" [data]="categoryToUpdate?.description"></markdown>
                         </div>
                     }
 
                     @if(isParent==false){
                         <label class="font-bold text-lg dark:text-white">{{ 'UPDATE_CATEGORIES._parent' | translate }}</label>
                         <div class="px-4 py-2 bg-white border dark:bg-secondary-300 dark:border-secondary-200 rounded-lg p-4 mb-4">
-                            <label class="text-base dark:text-white">{{selectedCategory.name}}</label>
+                            <label class="text-base dark:text-white text-wrap break-all">{{selectedCategory.name}}</label>
                         </div>                        
                     }
                     
