--- a/src/app/pages/seller-offerings/offerings/seller-catalogs/create-catalog/create-catalog.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-catalogs/create-catalog/create-catalog.component.html
@@ -145,7 +145,7 @@
                             <div class="px-4 py-2 bg-white dark:bg-secondary-300 rounded-b-lg">
                                 <label for="editor" class="sr-only">Publish post</label>
                                 @if(showPreview){
-                                        <markdown class="text-gray-800 dark:text-gray-200" [data]="description"></markdown>
+                                        <markdown class="text-gray-800 dark:text-gray-200 text-wrap break-all" [data]="description"></markdown>
                                     
                                 }@else{
                                     <textarea id="editor" formControlName="description" rows="8" class="block w-full px-0 text-sm text-gray-800 dark:text-gray-200 bg-white dark:bg-secondary-300 border-0" placeholder="Add product description..." ></textarea>
@@ -173,7 +173,7 @@
                 <div class="m-8">
                     <div>
                         <label class="font-bold text-lg dark:text-white">{{ 'CREATE_CATALOG._name' | translate }}</label>
-                        <label class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                        <label class="mb-2 bg-gray-50 text-wrap break-all dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                             {{catalogToCreate?.name}}
                         </label>
                     </div>
@@ -194,7 +194,7 @@
                     @if(catalogToCreate?.description !=''){
                         <label class="font-bold text-lg dark:text-white">{{ 'CREATE_CATALOG._description' | translate }}</label>
                         <div class="px-4 py-2 bg-white rounded-lg p-4 mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-white text-gray-900">
-                            <markdown class="bg-gray-50 dark:bg-secondary-300 dark:text-white text-gray-900" [data]="catalogToCreate?.description"></markdown>
+                            <markdown class="bg-gray-50 text-wrap break-all dark:bg-secondary-300 dark:text-white text-gray-900" [data]="catalogToCreate?.description"></markdown>
                         </div>
                     }
                     
