--- a/src/app/pages/seller-offerings/offerings/seller-catalogs/seller-catalogs.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-catalogs/seller-catalogs.component.html
@@ -151,7 +151,7 @@
             <tbody>
                 @for (cat of catalogs; track cat.id) {
                     <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                        <td class="px-6 py-4">
+                        <td class="px-6 py-4 text-wrap break-all">
                             {{cat.name}}
                         </td>
                         <td class="px-6 py-4">
