--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/seller-product-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/seller-product-spec.component.html
@@ -155,7 +155,7 @@
             <tbody>
                 @for (prod of prodSpecs; track prod.id) {
                     <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                        <td class="px-6 py-4">
+                        <td class="px-6 py-4 text-wrap break-all">
                             {{prod.name}}
                         </td>
                         <td class="px-6 py-4">
