--- a/src/app/pages/seller-offerings/offerings/seller-service-spec/seller-service-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-service-spec/seller-service-spec.component.html
@@ -137,7 +137,7 @@
             <tbody>
                 @for (serv of servSpecs; track serv.id) {
                     <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
-                        <td class="px-6 py-4">
+                        <td class="px-6 py-4 text-wrap break-all">
                             {{serv.name}}
                         </td>
                         <td class="px-6 py-4">
